--- a/css/styles.css
+++ b/css/styles.css
@@ -474,3 +474,44 @@ footer .logo span {
 
 .social-link-item {
 }
+
+/* ========== MODAL WINDOW ============= */
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 4px;
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
+    0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background: #fcfcfc;
+  padding: 24px;
+}
+
+.modal-close {
+  right: 0;
+  width: 24px;
+  height: 24px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: ##e7e9fc;
+  display: block;
+  margin-left: auto;
+}
+.modal-header {
+}
+.modal-label {
+}
+.modal-input {
+}
