--- a/css/styles.css
+++ b/css/styles.css
@@ -188,7 +188,7 @@ header .logo span {
   margin-bottom: 48px;
 }
 
-.hero-btn {
+.btn {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
@@ -206,8 +206,8 @@ header .logo span {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-btn:hover,
-.hero-btn:focus {
+.btn:hover,
+.btn:focus {
   background-color: #404bbf;
 }
 
@@ -475,6 +475,51 @@ footer .logo span {
 .social-link-item {
 }
 
+.subscribe {
+  margin-left: 80px;
+}
+.subscribe-label {
+}
+
+.subscribe-wrap {
+  display: flex;
+  gap: 24px;
+  margin-top: 16px;
+}
+
+.subscribe-input {
+  border: 1px solid #fff;
+  border-radius: 4px;
+  width: 264px;
+  height: 40px;
+  padding-left: 16px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.subscribe-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.subscribe .btn {
+  width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscribe-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
 /* ========== MODAL WINDOW ============= */
 
 .backdrop {
@@ -483,6 +528,16 @@ footer .logo span {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
+  z-index: 999;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
 }
 
 .modal {
@@ -505,13 +560,140 @@ footer .logo span {
   height: 24px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
-  background-color: ##e7e9fc;
+  background-color: #e7e9fc;
   display: block;
   margin-left: auto;
+  position: relative;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.close-icon {
+  fill: #2e2f42;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-close:hover .close-icon {
+  fill: #fff;
+}
+
 .modal-header {
+  margin-top: 24px;
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
 }
+
+.modal-form {
+}
+
 .modal-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
 }
+
+.modal-input-wrap {
+  position: relative;
+}
+
 .modal-input {
+  width: 100%;
+  margin-top: 4px;
+  margin-bottom: 8px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  height: 40px;
+  padding-left: 38px;
+  outline: transparent;
+}
+
+.modal-icon {
+  fill: #2e2f42;
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.modal-input:focus-within {
+  border: 1px solid #4d5ae5;
+}
+
+.modal-input:focus-within + .modal-icon {
+  fill: #4d5ae5;
+}
+
+.modal-comment {
+  height: 120px;
+  padding-top: 8px;
+  padding-left: 16px;
+  resize: none;
+}
+
+.modal-label-comment {
+  margin-bottom: 8px;
+}
+
+.modal-comment::placeholder {
+  font-size: 12px;
+  line-height: 1.16667;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-label-ppolicy {
+  display: flex;
+  align-items: center;
+}
+
+.check {
+  margin-right: 8px;
+  vertical-align: middle;
+}
+
+.modal-label-ppolicy span {
+  left: 24px;
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  fill: transparent;
+  margin-right: 8px;
+}
+
+.check:checked + .modal-label-ppolicy span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+
+.modal-label .ppolicy {
+  line-height: 1.33333;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: #4d5ae5;
+  margin-left: 4px;
+}
+
+.modal-form .btn {
+  margin-top: 24px;
 }
