--- a/css/styles.css
+++ b/css/styles.css
@@ -608,10 +608,14 @@ footer .logo span {
   margin-bottom: 8px;
 }
 
+.label-com-input-wrap {
+  margin-bottom: 16px;
+}
+
 .modal-label {
   display: block;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
@@ -628,6 +632,8 @@ footer .logo span {
   height: 40px;
   padding-left: 38px;
   outline: transparent;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon {
@@ -636,6 +642,7 @@ footer .logo span {
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus-within {
@@ -651,10 +658,6 @@ footer .logo span {
   padding-top: 8px;
   padding-left: 16px;
   resize: none;
-}
-
-.modal-label-comment {
-  margin-bottom: 8px;
 }
 
 .modal-comment::placeholder {
