--- a/css/styles.css
+++ b/css/styles.css
@@ -655,16 +655,23 @@ footer .logo span {
 
 .modal-comment {
   height: 120px;
-  padding-top: 8px;
-  padding-left: 16px;
+  padding: 8px 16px;
   resize: none;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
 }
 
 .modal-comment::placeholder {
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: rgba(46, 47, 66, 0.4);
+}
+
+.modal-ppolicy-wrap {
+  margin-bottom: 24px;
 }
 
 .modal-label-ppolicy {
@@ -705,5 +712,4 @@ footer .logo span {
 }
 
 .modal-form .btn {
-  margin-top: 24px;
 }
