--- a/css/styles.css
+++ b/css/styles.css
@@ -408,6 +408,7 @@ header .logo span {
   background: #2e2f42;
   padding-top: 100px;
   padding-bottom: 100px;
+  min-width: 1400px;
 }
 
 .foot .container {
@@ -443,7 +444,7 @@ footer .logo span {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
-  color: #fff;
+  color: #ffffff;
   margin-bottom: 16px;
 }
 
@@ -481,7 +482,7 @@ footer .logo span {
 .subscribe-label {
 }
 
-.subscribe-wrap {
+.subscribe-form {
   display: flex;
   gap: 24px;
   margin-top: 16px;
@@ -498,7 +499,7 @@ footer .logo span {
   font-size: 12px;
   line-height: 2;
   letter-spacing: 0.04em;
-  color: #fff;
+  color: #ffffff;
 }
 
 .subscribe-input::placeholder {
@@ -509,7 +510,7 @@ footer .logo span {
 }
 
 .subscribe .btn {
-  width: 165px;
+  min-width: 165px;
   height: 40px;
   display: flex;
   justify-content: center;
