--- a/css/styles.css
+++ b/css/styles.css
@@ -685,17 +685,20 @@ footer .logo span {
   vertical-align: middle;
 }
 
-.modal-label-ppolicy span {
+.check-icon-span {
   left: 24px;
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   fill: transparent;
   margin-right: 8px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check:checked + .modal-label-ppolicy span {
