--- a/css/styles.css
+++ b/css/styles.css
@@ -676,7 +676,7 @@ footer .logo span {
 }
 
 .modal-label-ppolicy {
-  display: flex;
+  display: inline-flex;
   align-items: center;
 }
 
@@ -701,7 +701,7 @@ footer .logo span {
     fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.check:checked + .modal-label-ppolicy span {
+.check:checked + .modal-label-ppolicy .check-icon-span {
   background-color: #404bbf;
   border: none;
   fill: #f4f4fd;
